<resources>
    <string name="app_name">PRTakeAway</string>
    <string name="tvCorreo">Correu electrònic:</string>
    <string name="tvContraseña">Contrasenya:</string>
    <string name="btnLogin">LOGIN</string>
    <string name="tituloPerfil">EL TEU PERFIL</string>
    <string name="perfilNombre">Nom:</string>
    <string name="perfilApellido">Cognom:</string>
    <string name="perfilCorreo">Correu:</string>
    <string name="perfilDireccion">Direcció:</string>
    <string name="perfilTelefono">Telèfon:</string>
    <string name="itemBtnAfegir"> + </string>
    <string name="mostrarTodo">Mostrar tot</string>
    <string name="Hamburguesas">Hamburguesas</string>
    <string name="Complements">Complements</string>
    <string name="begudes">Begudes</string>
    <string name="estatComanda">Estat de la teva comanda</string>
    <string name="confirmar">Estàs segur de confirmar la comanda?</string>
    <string name="btnConfirmar">Confirmar compra</string>
    <string name="comentariAdicional">Comentari adicional: </string>
    <string name="preuTotal">Preu total: </string>
    <string name="elTeuCarrito">EL TEU CARRITO</string>
    <string name="btnProductos">VEURE PRODUCTES</string>
    <string name="btnComandes">VEURE COMANDES</string>
    <string name="btnPerfil">VEURE PERFIL</string>
</resources>