<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity"
    android:background="#2E68CD"
    android:backgroundTint="#2E68CD"
    android:padding="150px">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#977979"
        android:backgroundTint="#206688"
        android:padding="100px"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloPerfil"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_marginTop="100px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfilNombre"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginTop="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfilApellido"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_marginTop="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfilCorreo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_marginTop="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfilDireccion"
            android:textColor="@color/white"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_marginTop="50px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfilTelefono"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>