<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E68CD"
    android:backgroundTint="#379BD1"
    tools:context=".CarritoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="100px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elTeuCarrito"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35dp"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="150px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preuTotal"
            app:layout_constraintBottom_toTopOf="@+id/etComentario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewCarrito"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/etComentario"
            android:layout_width="match_parent"
            android:layout_height="150px"
            app:layout_constraintTop_toBottomOf="@+id/tvPrecio"
            app:layout_constraintBottom_toTopOf="@+id/btnConfirmar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/comentariAdicional"
            android:layout_marginHorizontal="50px"
            android:layout_marginVertical="50px"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etComentario"
            android:text="@string/btnConfirmar"
            android:layout_marginTop="50px"
            android:layout_gravity="center"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>